Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50031

Demobrowser: Open new tab with middle click on link, breaks selection of text and items

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.5.1
    • WebEngine
    • None

      In the demobrowser, if you middle click a link to open it in a new tab, selection of text doesn't work, as well as cursors don't change.

      Possible event handling issue.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes