Fix MouseMove event handling when opening a new tab with middle click.

When opening a new tab by middle clicking on a link in a web page, two
MouseMove events are sent to Chromium consecutively, without getting
proper acknowledgment events, which causes further move events not
to be handled properly.
Fix consists in preventing the second move event from being sent.

Change-Id: Ia0a64698476226e472faa53f75b51dfb6ed477c9
Task-number: QTBUG-50031
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>